# docs/swagger.yaml
@@ -217,8 +217,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/internal_controllers.CheckEmailResponse'
-        "403":
-          description: Forbidden
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/internal_controllers.ErrorResponse'
       summary: Get attributes for the authenticated user. If multiple records for
